# example-subsys

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md
applications/library_build/: CMakeLists.txt  prj.conf
applications/target_application/: CMakeLists.txt
applications/target_application/src/: main.c
subsys/myproto/: CMakeLists.txt  Kconfig
subsys/myproto/include/: myproto.h
subsys/myproto/src/: myproto.c
